// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sequence chunk component should render with highlights 1`] = `
<DocumentFragment>
  <svg
    height="30"
    width="100"
  >
    <text
      class="sequence__sequence__chunk__counter"
      x="100"
      y="10"
    >
      30
    </text>
    <text
      class="sequence__sequence__chunk__sequence"
      x="0"
      y="20"
    >
      ABCDEFGHIJ
    </text>
    <rect
      fill="blue"
      height="2"
      width="10"
      x="0"
      y="22"
    />
    <rect
      fill="blue"
      height="2"
      width="10"
      x="50"
      y="22"
    />
    <rect
      fill="blue"
      height="2"
      width="10"
      x="80"
      y="22"
    />
  </svg>
</DocumentFragment>
`;

exports[`Sequence chunk component should render without highlights 1`] = `
<DocumentFragment>
  <svg
    height="30"
    width="100"
  >
    <text
      class="sequence__sequence__chunk__counter"
      x="100"
      y="10"
    >
      30
    </text>
    <text
      class="sequence__sequence__chunk__sequence"
      x="0"
      y="20"
    >
      ABCDEFGHIJ
    </text>
  </svg>
</DocumentFragment>
`;
